tenant info provided by data providers
